--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chalk": "^4.1.2",
     "commander": "^8.1.0",
     "conf": "^10.0.1",
+    "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "node-emoji": "^1.10.0"
   }
