--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "conf": "^10.0.1",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
-    "node-emoji": "^1.10.0"
+    "node-emoji": "^1.10.0",
+    "shelljs": "^0.8.4"
   }
 }
